Contact Pop Up: fixes on alignment of Submit button on 400px

--- a/css-compiled/contact-pop-up.css
+++ b/css-compiled/contact-pop-up.css
@@ -20,7 +20,9 @@
   font-weight: normal; }
 .send-message-form input[name=submit] {
   margin-bottom: 10px;
-  font-weight: bold; }
+  font-weight: bold;
+  position: relative;
+  right: -8px; }
 .send-message-form footer {
   clear: both;
   margin-top: 10px;
